# bibparser

./: .gitignore  .~lock.test.docx#  pyproject.toml
bibparser/: bibparser.py  lab24.bib  retitle.py
